--- a/Skill Development Projects/Responsive Web Design/photo gallery/index.html
+++ b/Skill Development Projects/Responsive Web Design/photo gallery/index.html
@@ -7,6 +7,9 @@
     <title>Photo Gallery</title>
 </head>
 <body>
+    <header class="header">
+        <h1>css flexbox photo gallery</h1>
+      </header>
     <div class="gallery">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
       <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
