Added a footer showcasing my github

--- a/Skill Development Projects/Responsive Web Design/recipes/recipesPages/pastaBake.html
+++ b/Skill Development Projects/Responsive Web Design/recipes/recipesPages/pastaBake.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Chicken Pasta Bake</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="banner">
-    <img class="banner-img" src="../Images/pastaBake.png" alt="Chicken Pasta Bake">
+      <img
+        class="banner-img"
+        src="../Images/pastaBake.png"
+        alt="Chicken Pasta Bake"/>
+      <p class="text"><strong>Pasta Bake</strong> - A phenomenal dish, great for large servings. This 40 minute long recipe will leave wanting more.</p>
     </div>
-</body>
+    
+  </body>
+  <footer>
+    <p class="text">This is a basic recipe web page product. Other projects are on my github @EmisGrig</p>
+  </footer>
 </html>
