--- a/Skill Development Projects/Responsive Web Design/recipes/recipesPages/pastaBake.html
+++ b/Skill Development Projects/Responsive Web Design/recipes/recipesPages/pastaBake.html
@@ -13,13 +13,9 @@
         src="../Images/pastaBake.png"
         alt="Chicken Pasta Bake"/>
       <p class="text"><strong>Pasta Bake</strong> - A phenomenal dish, great for large servings. This 40 minute long recipe will leave wanting more. It is a hearty and flavorful dish that combines tender pieces of chicken with pasta, and a creamy sauce, all baked together to perfection. This comforting meal typically starts with cooking pasta until al dente, then mixing it with cooked chicken, as well as the creamy sauce. The mixture is then poured into a baking dish, topped with cheese and baked until bubbly and golden brown. This versatile dish can be customized with different types of pasta, vegetables, and seasonings to suit personal preferences, making it a favorite among families and a perfect option for gatherings or weeknight dinners.
-
-
-
-
-
       </p>
     </div>
+    <a href="../index.html"><button class="home">Menu</button></a>
     
   </body>
   <footer>
