Formatting on other recipe pages

--- a/Skill Development Projects/Responsive Web Design/recipes/recipesPages/peanutChicken.html
+++ b/Skill Development Projects/Responsive Web Design/recipes/recipesPages/peanutChicken.html
@@ -10,5 +10,9 @@
     <div class="banner">
     <img class="banner-img" src="../Images/peanutChicken.png" alt="Chicken Pasta Bake">
     </div>
+    <a href="../index.html"><button class="home">Menu</button></a>
 </body>
+<footer>
+  <p class="text">This is a basic recipe web page product. Other projects are on my github @EmisGrig</p>
+</footer>
 </html>
